# serializer version: 1
# name: test_x2
  ImageModelDescriptor(
    architecture=DCTLSAArch(
      id='DCTLSA',
      name='DCTLSA',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '55nf',
      '6nm',
      '5nh',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_x4
  ImageModelDescriptor(
    architecture=DCTLSAArch(
      id='DCTLSA',
      name='DCTLSA',
    ),
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '55nf',
      '6nm',
      '5nh',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
